# c-datastructures

./: CMakeLists.txt  README.md
examples/: main.c
src/: dict.c  linked_list.c  list.c
src/include/: dict.h  linked_list.h  list.h
